--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,8 +2,8 @@
 .online-croswords-section {
   margin-top: 3%;
   margin-bottom: 3%;
-  margin-left: 2.7%;
-  margin-right: 2.7%;
+  padding-left: 2.7%;
+  padding-right: 2.7%;
   width: 100%;
 }
 
